k8s-manifests/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
    annotations:
        kompose.cmd: kompose -f docker-compose.dev.yml convert
        kompose.version: 1.34.0 (HEAD)
    labels:
        io.kompose.service: backend
    name: backend
spec:
    type: NodePort
    ports:
        - name: http
          port: 9100
          targetPort: 9100
          nodePort: 30000
    selector:
        io.kompose.service: backend
