k8s-manifests/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose -f docker-compose.dev.yml convert
    kompose.version: 1.34.0 (HEAD)
  labels:
    io.kompose.service: frontend
  name: frontend
spec:
  ports:
    - name: "8081"
      port: 8081
      targetPort: 80
  selector:
    io.kompose.service: frontend
