k8s-manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: my-ingress
    annotations:
        # Remove the rewrite-target and use-regex annotations
spec:
    tls:
        - hosts:
              - my-app.local
          secretName: my-app-tls # The secret containing your TLS cert
    rules:
        - host: my-app.local
          http:
              paths:
                  - path: /api
                    pathType: Prefix
                    backend:
                        service:
                            name: backend
                            port:
                                number: 9100
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: frontend
                            port:
                                number: 8081
